--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@ div{
     width: 100%;
     height: 100%;
 }
+canvas{
+    position:absolute;
+}
+button{
+    position:absolute;
+}
 body{
     background-color: slategrey;
     margin: 0;
