--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ canvas{
 button{
     position:absolute;
 }
+.LineMenu{
+    background-color: rgba(255, 255, 255, 0.5);
+}
 body{
     background-color: slategrey;
     margin: 0;
