--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
-div{
+.mainDiv{
     background-color:antiquewhite;
     width: 100%;
     height: 100%;
 }
-canvas{
+.toolbar{
     position:absolute;
 }
+/*
 button{
     position:absolute;
 }
+*/
 .LineMenu{
     background-color: rgba(255, 255, 255, 0.5);
+
+    position:absolute;
 }
 body{
     background-color: slategrey;
@@ -21,4 +25,7 @@ body{
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;  
+}
+.tool{
+    position:relative;
 }
